--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('Опросник для исследования.csv')\n",
+    "df = pd.read_csv('data.csv')\n",
     "df = df.loc[df['Ваш GPA за первый семестр первого курса (используйте точку в качестве разделителя, пример 3.0)'] != '-']\n",
     "df = df.loc[df['Ваш GPA за первый семестр первого курса (используйте точку в качестве разделителя, пример 3.0)'] != '?']\n",
     "df = df.loc[df['Ваш GPA за первый семестр первого курса (используйте точку в качестве разделителя, пример 3.0)'] != '1 курс']\n",
@@ -130,14 +130,6 @@
     "df = df.replace('Да', 1)\n",
     "df = df.replace('Нет', 0)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6731350c-dcd6-4cc5-9b95-a884ef990d35",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -250,43 +242,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e4896aa5-5411-4073-8d42-9b95fbe01495",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "5f055170-33fa-4c86-916b-f17f4187256d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.4935350791497337"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#X = X.drop(['type_NIS/BIL/RPhMS', 'type_ordinary', 'english_A0-A1', 'english_A2', 'english_B1', 'gpa_school_Satisfactory'],axis=1)\n",
-    "#x_train, x_test, y_train, y_test = train_test_split(X,y,test_size = 0.2, shuffle=True, random_state=42)\n",
-    "\n",
-    "#regr = linear_model.LinearRegression()\n",
-    "\n",
-    "#regr.fit(x_train, y_train)\n",
-    "\n",
-    "#regr.score(x_test, y_test)\n",
-    "#why regression is so changable"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
    "id": "acde69a6-328a-43df-8acf-d7d951c5b61c",
    "metadata": {},
@@ -393,14 +348,6 @@
     "features_significant\n",
     "#by p-values: activism, injustice, interest, новостные порталы, паблики, да устраивает, затрудняюсь, скорее не устраивает, устраивает"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "988f2ad7-ecda-4e06-8cff-b5334e9bf917",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -832,14 +779,6 @@
     "                                 #colors=['violet', 'lime'], ax=ax2)\n",
     "#male - 1, fem - 0"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63d924d8-8052-4e47-a94d-5ce0eee38cc0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
